Remove overflow issues. Add mobile sizing adjustments.

--- a/wp-content/themes/crucial-trading/patterns/main-menu/main-menu.scss
+++ b/wp-content/themes/crucial-trading/patterns/main-menu/main-menu.scss
@@ -16,6 +16,15 @@ $main-menu-font-family: 	'Montserrat', sans-serif;
 
 @import '../../assets/css/src/global.scss';
 
+body, 
+.content-wrap {
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	background-color: #CCC;   
+}
+
 /************** Main Menu **************/ 
  
 .main-menu__wrap {
